--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <section class="items"></section>
       <section class="cart">
         <ol class="cart__items"></ol>
-        <span class="total-price">R$:</span>
+        <div class="total-price"></div>
         <button class="empty-cart">Esvaziar carrinho</button>
       </section>
     </section>
